# cargo-tarball

./: .clog.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  tarball-config.yml
data/: crate.yml
src/: args.rs  compress.rs  de.rs  format.rs  main.rs
